<resources>
    <string name="app_name">Secret</string>
    <string name="plain_text">I certify, that it is my account and I have all benefits to this sensitive information.</string>
    <string name="action_settings">Settings</string>
    <string name="button">Submit</string>
    <string name="result1">I certify, that it is my account and I have all benefits to this sensitive information.</string>
    <string name="result3">New Text</string>
    <string name="result2">New Text</string>
    <string name="title_congratulations">Congratulations!</string>
    <string name="help">Help</string>
    <string name="username">Name</string>
    <string name="label_user">Username:</string>
    <string name="login">Sign in</string>
    <string name="logup">Sign up</string>
    <string name="alert_text">This app have two modes, study and recognition. If you want that app recognize you, you must learn it,how.</string>
    <string name="auth_label">Authorization</string>
    <string name="reg_label">Registration</string>
    <string name="label_congr">Successful registration, some information:</string>
    <string name="back_button">BACK</string>
    <string name="show_userlist">Show users</string>
    <string name="success">You successfully registrated!</string>

    <string name="recognition_mode">recognition</string>
    <string name="study_mode">study</string>
    <string name="label_right">Now:</string>
    <string name="label_left">Standard:</string>

</resources>
