<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_congratulations"
            android:id="@+id/congratulations_label"
            android:textStyle="bold" android:gravity="center"
            android:layout_gravity="center_horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result1"
            android:id="@+id/result1"
            android:layout_marginTop="2dp" android:layout_gravity="center_horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result2"
            android:id="@+id/result2" android:layout_marginTop="2dp" android:layout_gravity="center_horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result3"
            android:id="@+id/result3"
            android:layout_gravity="center_horizontal"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_button"
            android:id="@+id/back"
            android:onClick="backToPreLayout" android:theme="@style/submit"
            android:background="@drawable/rounded_button"
            android:layout_gravity="center_horizontal" android:layout_marginTop="340dp"/>
</LinearLayout>