<ScrollView android:layout_width="match_parent" xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="wrap_content">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context=".MainActivity$MainActivityFragment" android:orientation="vertical" android:weightSum="1">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/title" android:layout_marginLeft="100dp" android:textStyle="bold"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/label_user"
            android:id="@+id/label_user" android:layout_marginTop="20dp" android:textStyle="italic"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/username"
            />
    <TextView
            android:text="@string/plain_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView" android:textSize="24sp"
            android:textStyle="italic"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:inputType="none"/>
    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:text="@string/button"
            android:id="@+id/button"
            android:onClick="onClick" android:layout_gravity="center_horizontal"
            android:theme="@style/submit"
            android:padding="10dp"
            android:background="@drawable/rounded_button"
            android:layout_weight="0.14" android:layout_marginTop="30dp"/>

</LinearLayout>
    </ScrollView>
